# wordle-rs

./: 5-letter-words  Cargo.toml  README.md  words_5ltr.txt
.github/workflows/: main.yml
src/: dict.rs  game.rs  main.rs  util.rs  wordle_io.rs  words.rs
word_generator/src/: main.rs
words/: Cargo.toml
