[package]
name = "wordle"
description = "A wordle clone for your terminal (all credit to https://www.powerlanguage.co.uk/wordle/)"
license = "MIT"
version = "1.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.4"
